# dep-coastlines

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.tides  Makefile  README.md  install.sh  kbatch.yml  landsat_utils.py  process.sh  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt  run_coastlines.py  run_kbatch.sh  utils.py
.argo/: calculate_tides.yml  clean_rasters-0.7.0.18.yml  clean_rasters-0.7.0.4  clean_rasters-0.7.0.53.yml  clean_rasters-0.7.0.54.yml  clean_rasters-0.7.0.57.yml  clean_rasters-0.7.0.6.yml  clean_rasters-0.7.0.8.yml  clean_rasters-0.7.0.9.yml  clean_rasters-0.7.0.yml  continental.yml  copy_output_to_dep_open_data_bucket.yaml  dask_config.yml  mosaics-0.8.0.yml  mosaics-corrected-0.6.0.4.yml  mosaics-corrected-0.6.0.yml  mosaics-corrected-0.6.1.yml  mosaics-corrected-0.7.0.1.yml  mosaics-corrected-0.7.0.4.yml  mosaics-corrected-0.7.0.yml  nir-corrected-0.6.0.yml  raster.yml  s2_validation_mosaics.yml  tide_corrected_mosaics.yml  vector.yml
.github/workflows/: build-test-docker.yml
data/: coastal_pathrows.geojson  full_model_19Mar.joblib  model_13Feb.joblib  tide_data_urls.txt  training_data.gpkg  training_data_v7.gpkg  training_data_with_features_0-7-0-4_17May2024.csv  training_data_with_features_9Apr2024.csv
dep_coastlines/: MosaicLoader.py  annual_mosaics.py  annual_mosaics.yml  calculate_corrected_nir.py  calculate_corrected_nir.yml  calculate_tidal_intercept.py  calculate_tides.py  clean_rasters.py  clip_tide_data.py  common.py  config.py  continental.py  fix_lines_across_antimeridian.py  full_model_14May2024.joblib  full_model_16May2024.joblib  full_model_17May2024.joblib  full_model_6Apr2024.joblib  full_model_9Apr2024.joblib  grid.py  make_masks.py  make_vectors.py  mask_model.py  merge_vectors.sh  patch_eez_territories.py  points_from_lines.py  raster.py  raster_cleaning.py  shrunk_model_9May2024.joblib  styles.csv  swirnirplot.R  task_utils.py  tide_corrected_mosaics.py  tide_utils.py  time_utils.py  utils.py  vector.py  vectorization.py  water_indices.py  writer.py
docs/: DEP Coastlines legend mockup.xcf  bad_urls.txt  debug_map.qgz  presentation_slides.qgz
notebooks/: CoralCoastClip.ipynb  Merge_Tiles.ipynb  all_time.ipynb  cloud_masking.ipynb  cloud_model_29Jan.joblib  consensus.ipynb  grid_zones.ipynb  mask_model.ipynb  mask_model_v7.ipynb  resampling.ipynb
scripts/: clip_tide_data.py  continental.py  create_coastlines.py  create_mosaic.py  print_tasks.py
src/: annual_mosaics.py  annual_mosaics.yml  calculate_corrected_nir.py  calculate_rasters.py  calculate_rasters.sh  calculate_tidal_intercept.py  calculate_tides.py  calculate_water_indices.py  calculate_water_indices.yml  clean_rasters.py  clean_rasters.yml  clip_fes_models.py  clip_tide_data.py  constants.py  continental.py  create_coastlines.py  create_grid.py  create_mosaic.py  fix_lines_across_antimeridian.py  grid.py  interpolate_tides.py  interpolate_tides.yml  kbatch.yml  kbatch_calculate_rasters.yml  landsat_mosaics.py  landsat_mosaics.yml  make_vectors.py  make_vectors.yml  merge_vectors.sh  print_tasks.py  process.sh  raster_cleaning.py  raster_cleaning_alt.py  raster_cleaning_og.py  run_coastlines.py  run_on_pc.sh  test_vectorization.py  tide_utils.py  tonga_vectorization.py  utils.py  (+2 more)
tests/: test_tide_utils.py
validation/: annual_validation.py  roc_validation.py  util.py  validation_summary.py
(+1345 files in other folders)
