[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dep-coastlines"
authors = [{ name = "Jesse Anderson", email = "jesse.anderson@gmail.com" }]
description = "Shoreline mapping for Digital Earth Pacific"
dynamic = ["version"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cloud-logger",
    "dask[complete]>=2025.7.0",
    "dea-coastlines",
    "dea-tools>=0.4.1",
    "dep-tools",
    "eo-tides>=0.8.2",
    "gdal==3.10.3",
    "h5netcdf>=1.6.4",
    "joblib>=1.5.2",
    "llvmlite>=0.44.0",
    "numba>=0.61.2",
    "odc-geo>=0.4.10",
    "pyarrow>=21.0.0",
    "pyogrio>=0.11.1",
    "rasterio>=1.4.3",
    "scikit-learn>=1.7.1",
    "typer>=0.17.4",
    "xarray-spatial>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dep_coastlines"]

[tool.hatch.version]
path = "dep_coastlines/__init__.py"

[tool.uv.sources]
dep-tools = { git = "https://github.com/digitalearthpacific/dep-tools.git", tag = "v0.5.2" }
dea-coastlines = { git = "https://github.com/GeoscienceAustralia/dea-coastlines.git", tag = "3.0.1" }
cloud-logger = { git = "https://github.com/jessjaco/cloud-logger.git" }

[dependency-groups]
dev = [
    "plotnine>=0.15.0",
]
